chore(nvim): upgrading
Signed-off-by: Daniel Nordstrom <d@mrnordstrom.com>

--- a/config/kitty/config.conf
+++ b/config/kitty/config.conf
@@ -23,25 +23,21 @@ include ./themes/catppuccin-latte.conf
 
 #
 # Font
-#   Desktop license from: https://fsd.it/shop/fonts/pragmatapro
+# 
+# Highly recommend Pragmata Pro Mono: https://fsd.it/shop/fonts/pragmatapro
 #
 
-font_family PragmataPro Mono Liga Regular
-bold_font PragmataPro Mono Liga Bold
-italic_font PragmataPro Mono Liga Italic
-bold_italic_font PragmataPro Mono Liga Bold Italic
+font_family PragmataPro Mono Liga
 font_size 10
 
-# Increase line height since PragmataPro Mono has no line spacing
-
+# Set line height since PragmataPro Mono has no leading (by design).
 adjust_line_height 140%
 
 #
 # Cursor
 #
 
-# Set to "cursor" to disable ligatures in cursor for readability
-
+# Always use ligatures. Setting this to "cursor" disables ligatures only under the cursor.
 disable_ligatures never
 
 # Block cursor with no disgusting blinking
@@ -75,28 +71,22 @@ dynamic_background_opacity no
 #   - Font style can be set in (in)active_tab_font_style or with markup in tab_title_template.
 #
 
-# More subtle tab bar
+# Override theme color to make tab bar background transparent.
 
-# active_tab_foreground #CDD6F4
-# active_tab_background #1E1E2E
-# inactive_tab_foreground #a6adc8
-# inactive_tab_background #1E1E2E
 tab_bar_background none
 
-# Style
+# Place at bottom and center with slight spacing.
 
 tab_bar_edge bottom
-tab_bar_style separator
-tab_powerline_style round
+tab_bar_style powerline
+tab_powerline_style slanted
 tab_bar_align center
 tab_bar_margin_height 7.0 0.0
 tab_bar_margin_width 5.0
-
-# Formats
-
-tab_separator             ""
-tab_title_template        "{fmt.fg._9CA0B0}{fmt.bg._EFF1F5} {fmt.bg.tab}{fmt.bg.tab}{fmt.fg.tab} {title} {fmt.fg._9CA0B0}{fmt.bg._EFF1F5} {fmt.bg.tab}{fmt.fg.tab}{fmt.bg.tab}"
-active_tab_title_template "{fmt.fg._8839EF}{fmt.bg._EFF1F5} {fmt.fg.tab}{fmt.bg.tab}{fmt.bold} {title} {fmt.nobold}{fmt.fg._8839EF}{fmt.bg._EFF1F5} {fmt.bg.tab}{fmt.bg._EFF1F5}{fmt.fg.tab}{fmt.bg.tab}"
+tab_separator ""
+tab_activity_symbol "!"
+tab_title_template "{fmt.fg._9CA0B0}{fmt.bg._EFF1F5} {fmt.bg.tab}{fmt.bg.tab}{fmt.fg.tab} {title} {activity_symbol} {fmt.fg._9CA0B0}{fmt.bg._EFF1F5} {fmt.bg.tab}{fmt.fg.tab}{fmt.bg.tab}"
+active_tab_title_template "{fmt.fg._8839EF}{fmt.bg._EFF1F5} {fmt.fg.tab}{fmt.bg.tab}{fmt.bold} {title} {activity_symbol} {fmt.nobold}{fmt.fg._8839EF}{fmt.bg._EFF1F5} {fmt.bg.tab}{fmt.bg._EFF1F5}{fmt.fg.tab}{fmt.bg.tab}"
 
 # Font
 
@@ -111,9 +101,11 @@ inactive_tab_font_style normal
 
 term xterm-kitty
 editor vim
-shell_integration disabled
 allow_remote_control yes
 listen_on unix:@mykitty
+
+# Disable automatic shell integration since we do it in our Zsh configuration.
+shell_integration disabled
 
 # Behavior
 
@@ -125,12 +117,22 @@ mouse_hide_wait -1
 
 # Resize in greater steps
 
+remember_window_size  yes
+initial_window_width  640
+initial_window_height 400
 window_resize_step_cells 20
 window_resize_step_lines 20
 
 # Layouts to enable by default
 
 enabled_layouts horizontal,vertical,tall,grid
+
+hide_window_decorations yes
+inactive_text_alpha 0.75
+repaint_delay 5
+input_delay 5
+sync_to_monitor no
+draw_minimal_borders
 
 # Scrolling
 #   NOTE: On Wayland, touch scroll is also used for mice
@@ -144,10 +146,13 @@ url_style single
 strip_trailing_spaces smart
 select_by_word_characters @-./_~?&=%+#
 
-
 # nvim scrollback pager, credit to page-down on GitHub.
 #   See: https://github.com/kovidgoyal/kitty/issues/719#issuecomment-952039731
-scrollback_pager bash -c "exec nvim 63<&0 0</dev/null -c 'map <silent> q :qa!<CR>' -c 'set shell=bash scrollback=100000 termguicolors laststatus=2' -c 'autocmd TermEnter * stopinsert' -c 'autocmd TermClose * call cursor(max([0,INPUT_LINE_NUMBER-1])+CURSOR_LINE, CURSOR_COLUMN)' -c 'terminal sed </dev/fd/63 -e \"s/'$'\x1b'']8;;file:[^\]*[\]//g\" && sleep 0.01 && printf \"'$'\x1b'']2;\"'"
+# scrollback_pager bash -c "exec nvim 63<&0 0</dev/null -c 'map <silent> q :qa!<CR>' -c 'set shell=bash scrollback=100000 termguicolors laststatus=2' -c 'autocmd TermEnter * stopinsert' -c 'autocmd TermClose * call cursor(max([0,INPUT_LINE_NUMBER-1])+CURSOR_LINE, CURSOR_COLUMN)' -c 'terminal sed </dev/fd/63 -e \"s/'$'\x1b'']8;;file:[^\]*[\]//g\" && sleep 0.01 && printf \"'$'\x1b'']2;\"'"
+
+# Miscellaneous
+
+strip_trailing_spaces smart
 
 #
 # KEY MAPS
@@ -156,27 +161,47 @@ scrollback_pager bash -c "exec nvim 63<&0 0</dev/null -c 'map <silent> q :qa!<CR
 # Unmap defaults
 
 clear_all_shortcuts yes
+clear_all_mouse_actions yes
+
+# Mouse
+
+mouse_map left press ungrabbed mouse_selection normal
+mouse_map left doublepress grabbed,ungrabbed mouse_selection word
+mouse_map left triplepress grabbed,ungrabbed mouse_selection line
+mouse_map ctrl+left press grabbed,ungrabbed mouse_selection rectangle
+mouse_map shift+left press grabbed,ungrabbed mouse_selection extend
+mouse_map kitty_mod+left release grabbed,ungrabbed mouse_handle_click link
+
+mouse_map middle release grabbed,ungrabbed paste_from_selection
+mouse_map ctrl+left triplepress grabbed,ungrabbed mouse_selection line_from_point
+mouse_map kitty_mod+right press grabbed,ungrabbed mouse_show_command_output
 
 # Remap defaults
 
-map kitty_mod+c copy_to_clipboard
-map kitty_mod+v paste_from_clipboard
-map kitty_mod+equal change_font_size current +1.0
-map kitty_mod+plus change_font_size current +1.0
-map kitty_mod+minus change_font_size current -1.0
-map kitty_mod+0 change_font_size current 0
-map kitty_mod+u kitten unicode_input
+map kitty_mod+alt+c copy_to_clipboard
+map kitty_mod+alt+v paste_from_clipboard
+map kitty_mod+alt+equal change_font_size current +1.0
+map kitty_mod+alt+plus change_font_size current +1.0
+map kitty_mod+alt+minus change_font_size current -1.0
+map kitty_mod+alt+0 change_font_size current 0
+map kitty_mod+alt+u kitten unicode_input
+map kitty_mod+alt+f>f open_url_with_hints
+map kitty_mod+alt+f>kitty_mod+alt+f open_url_with_hints
+map kitty_mod+alt+f>p kitten hints --type path
+map kitty_mod+alt+f>kitty_mod+alt+p kitten hints --type path
 
 # Config
 
-map f1 launch firefox https://sw.kovidgoyal.net/kitty
-map f2 set_tab_title
-map f5 load_config_file /etc/nixos/config/kitty/config.conf
-map f6 debug_config
+map kitty_mod+alt+f1 launch firefox https://sw.kovidgoyal.net/kitty
+map kitty_mod+alt+f2 set_tab_title
+map kitty_mod+alt+f5 load_config_file /etc/nixos/config/kitty/config.conf
+map kitty_mod+alt+f6 debug_config
+map kitty_mod+alt+f9 kitty_shell window
 
 # Layout management
 
 map kitty_mod+w>i next_layout
+map kitty_mod+w>t swap_with_window
 map kitty_mod+w>o layout_action rotate
 map kitty_mod+w>a layout_action increase_num_full_size_windows
 map kitty_mod+w>x layout_action decrease_num_full_size_windows
@@ -193,6 +218,11 @@ map kitty_mod+w>j neighboring_window bottom
 map kitty_mod+w>k neighboring_window top
 map kitty_mod+w>l neighboring_window right
 
+map kitty_mod+w>kitty_mod+w>h neighboring_window left
+map kitty_mod+w>kitty_mod+w>j neighboring_window bottom
+map kitty_mod+w>kitty_mod+w>k neighboring_window top
+map kitty_mod+w>kitty_mod+w>l neighboring_window right
+
 map kitty_mod+w>r>r start_resizing_window
 map kitty_mod+w>r>h resize_window narrower 20
 map kitty_mod+w>r>l resize_window wider 20
@@ -206,14 +236,24 @@ map kitty_mod+w>c close_window
 
 # Tab navigation
 
+map kitty_mod+t>1 goto_tab 1
+map kitty_mod+t>2 goto_tab 2
+map kitty_mod+t>3 goto_tab 3
+map kitty_mod+t>4 goto_tab 4
+map kitty_mod+t>5 goto_tab 5
+map kitty_mod+t>6 goto_tab 6
+map kitty_mod+t>7 goto_tab 7
+map kitty_mod+t>8 goto_tab 8
+map kitty_mod+t>9 goto_tab 9
+
 map kitty_mod+t>c close_tab
 map kitty_mod+t>n new_tab !neighbor
 map kitty_mod+t>t goto_tab -1
 map kitty_mod+t>h previous_tab
 map kitty_mod+t>l next_tab
 map kitty_mod+t>r set_tab_title
-map kitty_mod+t>j move_tab_backward
-map kitty_mod+t>k move_tab_forward
+map kitty_mod+t>j move_tab_forward
+map kitty_mod+t>k move_tab_backward
 
 # Seamless nvim <-> kitty navigation
 
@@ -226,7 +266,7 @@ map ctrl+l kitten ./kittens/pass_keys.py neighboring_window right ctrl+l
 # Remapping overlapping defaults
 #
 
-map kitty_mod+alt+h show_scrollback
+map kitty_mod+alt+g show_scrollback
 map kitty_mod+alt+u kitten unicode_input
 
 #
