chore(upgrades): updated inputs and changed kitty and nvim configs
A lot of files with trivial changes. Modified files:

new file:   catppuccin.vifm
modified:   config/firefox/tridactyl/tridactylrc
modified:   config/kitty/config.conf
modified:   config/kitty/sessions/dev-cloud.session
modified:   config/kitty/sessions/popupterm.session
modified:   config/kitty/sessions/scratchpad.session
modified:   config/nvim/lua/options/init.lua
modified:   config/nvim/spell/en.utf-8.add
modified:   config/nvim/spell/en.utf-8.add.spl
modified:   config/river/init
modified:   config/vifm/vifminfo.json
modified:   config/zsh/zshrc
modified:   flake.lock
modified:   flake.nix
modified:   hosts/dell-xps.nix
modified:   hosts/ryzen.nix
modified:   modules/common.nix
modified:   users/dnordstrom.nix
new file:   wallpapers/active
deleted:    wallpapers/active.png
modified:   wallpapers/active1.png
new file:   wallpapers/active13.png
deleted:    wallpapers/enso.xcf

--- a/config/kitty/config.conf
+++ b/config/kitty/config.conf
@@ -75,23 +75,23 @@ dynamic_background_opacity no
 
 tab_bar_background none
 
-# Place at bottom and center with slight spacing.
-
-tab_bar_edge bottom
-tab_bar_style powerline
-tab_powerline_style slanted
-tab_bar_align center
-tab_bar_margin_height 7.0 0.0
-tab_bar_margin_width 5.0
-tab_separator ""
-tab_activity_symbol "!"
-tab_title_template "{fmt.fg._9CA0B0}{fmt.bg._EFF1F5} {fmt.bg.tab}{fmt.bg.tab}{fmt.fg.tab} {title} {activity_symbol} {fmt.fg._9CA0B0}{fmt.bg._EFF1F5} {fmt.bg.tab}{fmt.fg.tab}{fmt.bg.tab}"
-active_tab_title_template "{fmt.fg._8839EF}{fmt.bg._EFF1F5} {fmt.fg.tab}{fmt.bg.tab}{fmt.bold} {title} {activity_symbol} {fmt.nobold}{fmt.fg._8839EF}{fmt.bg._EFF1F5} {fmt.bg.tab}{fmt.bg._EFF1F5}{fmt.fg.tab}{fmt.bg.tab}"
-
-# Font
+# Fonts
 
 active_tab_font_style normal
 inactive_tab_font_style normal
+tab_bar_align center
+tab_bar_edge bottom
+tab_bar_margin_height 7.0 0.0
+tab_bar_margin_width 5.0
+tab_bar_style separator
+tab_powerline_style slanted
+
+# Formatting
+
+tab_separator ""
+tab_activity_symbol ""
+active_tab_title_template "{fmt.fg._8839EF}{fmt.bg._EFF1F5} {fmt.fg.tab}{fmt.bg.tab}{fmt.bold} {title} {activity_symbol} {fmt.nobold}{fmt.fg._8839EF}{fmt.bg._EFF1F5} {fmt.bg.tab}{fmt.bg._EFF1F5}{fmt.fg.tab}{fmt.bg.tab}"
+tab_title_template "{fmt.fg._9CA0B0}{fmt.bg._EFF1F5} {fmt.bg.tab}{fmt.bg.tab}{fmt.fg.tab} {title} {activity_symbol} {fmt.fg._9CA0B0}{fmt.bg._EFF1F5} {fmt.bg.tab}{fmt.fg.tab}{fmt.bg.tab}"
 
 #
 # BEHAVIOR
@@ -100,11 +100,12 @@ inactive_tab_font_style normal
 # General
 
 term xterm-kitty
-editor vim
+editor nvim
 allow_remote_control yes
-listen_on unix:@mykitty
+listen_on unix:@kitty/plainterm/{kitty_pid}
 
-# Disable automatic shell integration since we do it in our Zsh configuration.
+# Disable automatic shell integration (Zsh configuration does it manually)
+
 shell_integration disabled
 
 # Behavior
@@ -132,7 +133,7 @@ inactive_text_alpha 0.75
 repaint_delay 5
 input_delay 5
 sync_to_monitor no
-draw_minimal_borders
+draw_minimal_borders yes
 
 # Scrolling
 #   NOTE: On Wayland, touch scroll is also used for mice
@@ -146,13 +147,10 @@ url_style single
 strip_trailing_spaces smart
 select_by_word_characters @-./_~?&=%+#
 
-# nvim scrollback pager, credit to page-down on GitHub.
-#   See: https://github.com/kovidgoyal/kitty/issues/719#issuecomment-952039731
-# scrollback_pager bash -c "exec nvim 63<&0 0</dev/null -c 'map <silent> q :qa!<CR>' -c 'set shell=bash scrollback=100000 termguicolors laststatus=2' -c 'autocmd TermEnter * stopinsert' -c 'autocmd TermClose * call cursor(max([0,INPUT_LINE_NUMBER-1])+CURSOR_LINE, CURSOR_COLUMN)' -c 'terminal sed </dev/fd/63 -e \"s/'$'\x1b'']8;;file:[^\]*[\]//g\" && sleep 0.01 && printf \"'$'\x1b'']2;\"'"
-
 # Miscellaneous
 
 strip_trailing_spaces smart
+scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 
 #
 # KEY MAPS
