chore: upgrades and reorganization

--- a/config/kitty/config.conf
+++ b/config/kitty/config.conf
@@ -247,24 +247,30 @@ map kitty_mod+t>9 goto_tab 9
 map kitty_mod+t>c close_tab
 map kitty_mod+t>n new_tab !neighbor
 map kitty_mod+t>t goto_tab -1
-map kitty_mod+t>h previous_tab
-map kitty_mod+t>l next_tab
+map kitty_mod+t>j previous_tab
+map kitty_mod+t>k next_tab
 map kitty_mod+t>r set_tab_title
 map kitty_mod+t>j move_tab_forward
 map kitty_mod+t>k move_tab_backward
 
+# Match `<M-h>` and `<M-l>` buffer line tabs in Neovim.
+map alt+j next_tab
+map alt+k previous_tab
+
 # Seamless nvim <-> kitty navigation
 
-map ctrl+h kitten ./kittens/pass_keys.py neighboring_window left ctrl+h
-map ctrl+j kitten ./kittens/pass_keys.py neighboring_window bottom ctrl+j
-map ctrl+k kitten ./kittens/pass_keys.py neighboring_window top ctrl+k
-map ctrl+l kitten ./kittens/pass_keys.py neighboring_window right ctrl+l
+action_alias pass_keys kitten ~/.local/share/nvim/site/pack/packer/start/vim-kitty-navigator/pass_keys.py
+# action_alias pass_keys kitten ~/.local/share/nvim/site/pack/packer/start/vim-kitty-navigator/pass_keys.py
+map ctrl+h pass_keys neighboring_window left ctrl+h
+map ctrl+j pass_keys neighboring_window bottom ctrl+j
+map ctrl+k pass_keys neighboring_window top ctrl+k
+map ctrl+l pass_keys neighboring_window right ctrl+l
 
 #
 # Remapping overlapping defaults
 #
 
-map kitty_mod+alt+g show_scrollback
+map kitty_mod+alt+h show_scrollback
 map kitty_mod+alt+u kitten unicode_input
 
 #
