--- a/config/kitty/open-actions.conf
+++ b/config/kitty/open-actions.conf
@@ -17,6 +17,7 @@ action launch --type=overlay ${EDITOR} ${FILE_PATH}
 protocol file
 ext log
 action launch --title ${FILE} --type=os-window tail -f ${FILE_PATH}
+action change_font_size current -1
 
 # Open any image in overlay
 protocol file
