--- a/config/sway/main.conf
+++ b/config/sway/main.conf
@@ -1,5 +1,9 @@
 ##
 # SWAY WINDOW MANAGER
+#
+# Bar is launched by `systemd` as follows:
+#
+#     waybar --config "$HOME/.config/waybar/sway.json" 2> "$HOME/.local/share/logs/waybar.sway.log"
 ##
 
 #
@@ -557,16 +561,6 @@ mode "$mode_system" {
 }
 
 bindsym $mod+Backspace mode "$mode_system"
-
-#
-# Status bar
-#
-
-# We're using systemd instead of this:
-#
-# bar {
-#   swaybar_command waybar --config "$HOME/.config/waybar/sway.json" 2> "$HOME/.local/share/logs/waybar.sway.log"
-# }
 
 #
 # WINDOW ASSIGNMENTS
