--- a/config/wofi/config
+++ b/config/wofi/config
@@ -2,7 +2,7 @@ mode=drun,run
 normal_window=true
 no_actions=true
 matching=contains
-gtk_dark=true
+gtk_dark=false
 filter_rate=250
 allow_images=true
 allow_markup=true
