chore: updating nvim and firefox and cleanip

--- a/config/kitty/config.conf
+++ b/config/kitty/config.conf
@@ -228,7 +228,7 @@ map kitty_mod+w>r>k resize_window taller 20
 map kitty_mod+w>r>j resize_window shorter 20
 map kitty_mod+w>plus resize_window taller 20
 map kitty_mod+w>minus resize_window shorter 20
-map kitty_mod+w>equal reset_window_sizes
+map kitty_mod+w>equals reset_window_sizes
 
 map kitty_mod+w>c close_window
 
