fix: cleaning up wm config and fixing scripts

--- a/config/kitty/config.conf
+++ b/config/kitty/config.conf
@@ -37,8 +37,8 @@ adjust_line_height 140%
 # Cursor
 #
 
-# Always use ligatures. Setting this to "cursor" disables ligatures only under the cursor.
-disable_ligatures never
+# Set to "cursor" to disable ligatures under the cursor only. Otherwise "always" or "never".
+disable_ligatures cursor
 
 # Block cursor with no disgusting blinking
 
@@ -102,7 +102,7 @@ tab_title_template "{fmt.fg._9CA0B0}{fmt.bg._EFF1F5} {fmt.bg.tab}{fmt.bg.tab}
 term xterm-kitty
 editor nvim
 allow_remote_control yes
-listen_on unix:@kitty/plainterm/{kitty_pid}
+listen_on unix:@kitty/{kitty_pid}
 
 # Disable automatic shell integration (Zsh configuration does it manually)
 
@@ -114,29 +114,28 @@ confirm_os_window_close 0
 copy_on_select yes
 enable_audio_bell no
 focus_follows_mouse yes
-mouse_hide_wait -1
+mouse_hide_wait 1
 
-# Resize in greater steps
-
+# Increase step size for resizing.
 remember_window_size  yes
 initial_window_width  640
 initial_window_height 400
-window_resize_step_cells 20
-window_resize_step_lines 20
+window_resize_step_cells 10
+window_resize_step_lines 10
 
-# Layouts to enable by default
-
+# Layouts to enable by default.
 enabled_layouts horizontal,vertical,tall,grid
 
 hide_window_decorations yes
-inactive_text_alpha 0.75
+inactive_text_alpha 0.6
 repaint_delay 5
 input_delay 5
-sync_to_monitor no
+sync_to_monitor yes
 draw_minimal_borders yes
 
 # Scrolling
-#   NOTE: On Wayland, touch scroll is also used for mice
+#
+# NOTE: On Wayland, touch scroll is also used for mice.
 
 wheel_scroll_multiplier 5.0
 touch_scroll_multiplier 5.0
@@ -166,35 +165,40 @@ clear_all_mouse_actions yes
 mouse_map left press ungrabbed mouse_selection normal
 mouse_map left doublepress grabbed,ungrabbed mouse_selection word
 mouse_map left triplepress grabbed,ungrabbed mouse_selection line
+
 mouse_map ctrl+left press grabbed,ungrabbed mouse_selection rectangle
 mouse_map shift+left press grabbed,ungrabbed mouse_selection extend
-mouse_map kitty_mod+left release grabbed,ungrabbed mouse_handle_click link
+mouse_map kitty_mod+left press grabbed,ungrabbed mouse_handle_click link
 
-mouse_map middle release grabbed,ungrabbed paste_from_selection
-mouse_map ctrl+left triplepress grabbed,ungrabbed mouse_selection line_from_point
-mouse_map kitty_mod+right press grabbed,ungrabbed mouse_show_command_output
+mouse_map middle press grabbed,ungrabbed paste_from_selection
+
+mouse_map right press grabbed,ungrabbed mouse_handle_click link
+mouse_map right doublepress grabbed,ungrabbed mouse_selection word
+mouse_map right triplepress grabbed,ungrabbed mouse_selection line
 
 # Remap defaults
 
-map kitty_mod+alt+c copy_to_clipboard
-map kitty_mod+alt+v paste_from_clipboard
-map kitty_mod+alt+equal change_font_size current +1.0
-map kitty_mod+alt+plus change_font_size current +1.0
-map kitty_mod+alt+minus change_font_size current -1.0
-map kitty_mod+alt+0 change_font_size current 0
-map kitty_mod+alt+u kitten unicode_input
-map kitty_mod+alt+f>f open_url_with_hints
-map kitty_mod+alt+f>kitty_mod+alt+f open_url_with_hints
-map kitty_mod+alt+f>p kitten hints --type path
-map kitty_mod+alt+f>kitty_mod+alt+p kitten hints --type path
+map kitty_mod+c copy_to_clipboard
+map kitty_mod+v paste_from_clipboard
+map kitty_mod+equal change_font_size current +1.0
+map kitty_mod+plus change_font_size current +1.0
+map kitty_mod+minus change_font_size current -1.0
+map kitty_mod+0 change_font_size current 0
+map kitty_mod+u kitten unicode_input
+map kitty_mod+f>f open_url_with_hints
+map kitty_mod+f>kitty_mod+f open_url_with_hints
+map kitty_mod+f>u open_url_with_hints
+map kitty_mod+f>kitty_mod+u open_url_with_hints
+map kitty_mod+f>p kitten hints --type path
+map kitty_mod+f>kitty_mod+p kitten hints --type path
 
 # Config
 
-map kitty_mod+alt+f1 launch firefox https://sw.kovidgoyal.net/kitty
-map kitty_mod+alt+f2 set_tab_title
-map kitty_mod+alt+f5 load_config_file /etc/nixos/config/kitty/config.conf
-map kitty_mod+alt+f6 debug_config
-map kitty_mod+alt+f9 kitty_shell window
+map kitty_mod+f1 launch firefox https://sw.kovidgoyal.net/kitty
+map kitty_mod+f2 set_tab_title
+map kitty_mod+f5 load_config_file /etc/nixos/config/kitty/config.conf
+map kitty_mod+f6 debug_config
+map kitty_mod+f9 kitty_shell window
 
 # Layout management
 
@@ -254,13 +258,14 @@ map kitty_mod+t>j move_tab_forward
 map kitty_mod+t>k move_tab_backward
 
 # Match `<M-h>` and `<M-l>` buffer line tabs in Neovim.
+
 map alt+j next_tab
 map alt+k previous_tab
 
 # Seamless nvim <-> kitty navigation
 
 action_alias pass_keys kitten ~/.local/share/nvim/site/pack/packer/start/vim-kitty-navigator/pass_keys.py
-# action_alias pass_keys kitten ~/.local/share/nvim/site/pack/packer/start/vim-kitty-navigator/pass_keys.py
+
 map ctrl+h pass_keys neighboring_window left ctrl+h
 map ctrl+j pass_keys neighboring_window bottom ctrl+j
 map ctrl+k pass_keys neighboring_window top ctrl+k
@@ -270,8 +275,8 @@ map ctrl+l pass_keys neighboring_window right ctrl+l
 # Remapping overlapping defaults
 #
 
-map kitty_mod+alt+h show_scrollback
-map kitty_mod+alt+u kitten unicode_input
+map kitty_mod+h show_scrollback
+map kitty_mod+u kitten unicode_input
 
 #
 # Vim modifier maps
