--- a/config/qt5ct/qt5ct.conf
+++ b/config/qt5ct/qt5ct.conf
@@ -1,9 +1,9 @@
 [Appearance]
 color_scheme_path=/home/dnordstrom/.config/qt5ct/colors/catppuccin.conf
-custom_palette=true
-icon_theme=Vimix-dark
-standard_dialogs=gtk3
-style=kvantum-dark
+custom_palette=false
+icon_theme=Vimix
+standard_dialogs=kde
+style=kvantum
 
 [Fonts]
 fixed=@Variant(\0\0\0@\0\0\0(\0I\0n\0p\0u\0t\0 \0M\0o\0n\0o\0 \0\x43\0o\0n\0\x64\0\x65\0n\0s\0\x65\0\x64@\"\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
