feat(nixpkgs): package trimming

--- a/config/kitty/config.conf
+++ b/config/kitty/config.conf
@@ -5,9 +5,9 @@
 # Repository: https://github.com/dnordstrom/dotfiles
 #
 # See:
-#   - Overview: https://sw.kovidgoyal.net/kitty/overview
-#   - Options: https://sw.kovidgoyal.net/kitty/conf
-#   - Actions: https://sw.kovidgoyal.net/kitty/actions
+#   - Useless: https://sw.kovidgoyal.net/kitty
+#   - Options https://sw.kovidgoyal.net/kitty/conf
+#   - Actions fun, then it's done. https://sw.kovidgoyal.net/kitty/actions
 #   - Default: https://sw.kovidgoyal.net/kitty/_downloads/433dadebd0bf504f8b008985378086ce/kitty.conf
 ##
 
@@ -232,7 +232,7 @@ map kitty_mod+w>r>k resize_window taller 20
 map kitty_mod+w>r>j resize_window shorter 20
 map kitty_mod+w>plus resize_window taller 20
 map kitty_mod+w>minus resize_window shorter 20
-map kitty_mod+w>equals reset_window_sizes
+map kitty_mod+w>equal reset_window_sizes
 
 map kitty_mod+w>c close_window
 
