feat(sound): pipewire troubleshooting

--- a/config/pipewire/pipewire.conf.d/10-defaults.conf
+++ b/config/pipewire/pipewire.conf.d/10-defaults.conf
@@ -3,9 +3,9 @@
 ##
 
 context.properties = {
-  default.clock.rate = 192000
+  default.clock.rate = 44100
   default.clock.allowed-rates = [ 44100 48000 88200 96000 176400 192000 ]
-  default.clock.quantum = 4096/192000
-  default.clock.min-quantum = 2048/192000
-  default.clock.max-quantum = 8192/192000
+  default.clock.quantum = 4096
+  default.clock.min-quantum = 2048
+  default.clock.max-quantum = 8192
 }
