--- a/config/pipewire/pipewire-pulse.conf.d/10-default.conf
+++ b/config/pipewire/pipewire-pulse.conf.d/10-default.conf
@@ -2,6 +2,6 @@
 # Turn off the channel upmixing enabled by default for PulseAudio clients.
 ##
 
-stream.properties = {
-  channelmix.upmix = false
-}
+# stream.properties = {
+#   channelmix.upmix = false
+# }
