feat(wm): fixing config weirdness

--- a/config/wireplumber/main.conf
+++ b/config/wireplumber/main.conf
@@ -1,14 +1,33 @@
-# WirePlumber daemon context configuration #
+##
+# WIREPLUMBER ALSA DEVICES
+#
+# ALSA devices will contain any defaults specified here or in the `./main-lua.d/` Lua scripts we
+# include at the end of this file. If Pavucontrol can't connect to the session DBus, then
+# WirePlumber is probably starts after `pipewire-pulse.socket`.
+#
+# If the configuration changes, make sure to restart the PipeWire *service*, PulseAudio *socket*,
+# and any XDG desktop portals that provide file input dialogs etc.
+#
+# NOTE: Routing can get messed up if we switch the DAC to another USB port of apps point to the old.
+#
+# EXAMPLE:
+#
+#     ```sh
+#     $ systemctl --user --stop wireplumber.service pipewire-pulse.socket pipewire.service
+#     $ systemctl --user --start wireplumber.service
+#
+#     # Playback over PulseAudio emulation should now poke WirePlumber over session DBus, creating
+#     # and assigning audio/video streams to devices based on the rules/settings in main.lua.d/*.
+#     ```
+##
 
 context.properties = {
-  ## Properties to configure the PipeWire context and some modules
-
-  #application.name = WirePlumber
+  application.name = WirePlumber
   log.level = 2
   wireplumber.script-engine = lua-scripting
 
-  #mem.mlock-all = false
-  #support.dbus  = true
+  mem.mlock-all = false
+  support.dbus  = true
 }
 
 context.spa-libs = {
