--- a/config/wireplumber/wireplumber.conf
+++ b/config/wireplumber/wireplumber.conf
@@ -1,15 +1,35 @@
-# WirePlumber daemon context configuration #
+##
+# WIREPLUMBER CORE DAEMON
+#
+# The WirePlumber daemon is a session manager for PipeWire, taking 64 devices and mapping them as
+# needed. If Pavucontrol doesn't work and can't connect to session DBus, then WirePlumber is
+# probably starts after `pipewire-pulse.socket`. If the configuration changes, make sure to restart
+# the PipeWire *service*, PulseAudio *socket*, and any XDG desktop portals that provide file input
+# dialogs and similar for your.
+#
+# NOTE: This can get messed up if DAC switches USB port.
+#
+# `pw-top`, `pw-cli`, and `pw-metadata` are essential for debugging e.g. formats and sample rates.
+# If those look good and `alsamixer --card <id>` shows volume controls for the devices, we're good.
+#
+# EXAMPLE:
+#
+#     ```sh
+#     systemctl --user --stop wireplumber.service pipewire-pulse.socket pipewire.service`
+#     systemctl --user --start wireplumber.service`
+#     ```
+##
 
 context.properties = {
-  ## Properties to configure the PipeWire context and some modules
+  ## Properties to configure the PipeWire context and some modules.
 
-  #application.name = WirePlumber
-  log.level = 2
+  application.name = "WirePlumber Core"
+  log.level = 3
   wireplumber.script-engine = lua-scripting
-  #wireplumber.export-core = true
+  wireplumber.export-core = true
 
-  #mem.mlock-all = false
-  #support.dbus  = true
+  mem.mlock-all = false
+  support.dbus  = true
 }
 
 context.spa-libs = {
