--- a/config/qt5ct/qt5ct.conf
+++ b/config/qt5ct/qt5ct.conf
@@ -11,18 +11,18 @@ general=@Variant(\0\0\0@\0\0\0(\0I\0n\0p\0u\0t\0 \0S\0\x61\0n\0s\0 \0\x43\0o\0n\
 
 [Interface]
 activate_item_on_single_click=0
-buttonbox_layout=2
+buttonbox_layout=1
 cursor_flash_time=1000
-dialog_buttons_have_icons=2
+dialog_buttons_have_icons=1
 double_click_interval=400
 gui_effects=General, FadeMenu, AnimateCombo, FadeTooltip, AnimateToolBox
-keyboard_scheme=2
+keyboard_scheme=1
 menus_have_icons=true
 show_shortcuts_in_context_menus=true
-stylesheets=/nix/store/n2xzgqp2rfjkdc5qkw8kjg4a828650h8-qt5ct-1.5/share/qt5ct/qss/scrollbar-simple.qss
-toolbutton_style=2
-underline_shortcut=2
-wheel_scroll_lines=2
+stylesheets=qt5ct --config /etc/nixos/config/qt5ct/colors/catppuccin.conf
+toolbutton_style=1
+underline_shortcut=1
+wheel_scroll_lines=3
 
 [QSSEditor]
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2]\0\0\0\xe2\0\0\x4\xdf\0\0\x2\xd4\0\0\x2]\0\0\0\xe2\0\0\x4\xdf\0\0\x2\xd4\0\0\0\x1\0\0\0\0\a\x80\0\0\x2]\0\0\0\xe2\0\0\x4\xdf\0\0\x2\xd4)
