feat(wm): fixing config weirdness

--- a/config/wireplumber/bluetooth.conf
+++ b/config/wireplumber/bluetooth.conf
@@ -3,7 +3,7 @@
 context.properties = {
   ## Properties to configure the PipeWire context and some modules
 
-  application.name = "WirePlumber Bluetooth"
+  application.name = WirePlumber
   log.level = 2
   wireplumber.script-engine = lua-scripting
   wireplumber.export-core = false
