--- a/config/wireplumber/main.conf
+++ b/config/wireplumber/main.conf
@@ -26,8 +26,8 @@ context.properties = {
   log.level = 2
   wireplumber.script-engine = lua-scripting
 
-  mem.mlock-all = false
-  support.dbus  = true
+  # mem.mlock-all = false
+  # support.dbus  = true
 }
 
 context.spa-libs = {
