--- a/config/wireplumber/wireplumber.conf
+++ b/config/wireplumber/wireplumber.conf
@@ -23,13 +23,13 @@
 context.properties = {
   ## Properties to configure the PipeWire context and some modules.
 
-  application.name = "WirePlumber Core"
+  application.name = WirePlumber
   log.level = 3
   wireplumber.script-engine = lua-scripting
   wireplumber.export-core = true
 
-  mem.mlock-all = false
-  support.dbus  = true
+  # mem.mlock-all = false
+  # support.dbus  = true
 }
 
 context.spa-libs = {
@@ -40,7 +40,7 @@ context.spa-libs = {
   # that factory.
   #
   api.alsa.*      = alsa/libspa-alsa
-  api.bluez5.*    = bluez5/libspa-bluez5
+  # api.bluez5.*    = bluez5/libspa-bluez5
   api.v4l2.*      = v4l2/libspa-v4l2
   api.libcamera.* = libcamera/libspa-libcamera
   audio.convert.* = audioconvert/libspa-audioconvert
@@ -106,5 +106,5 @@ wireplumber.components = [
   # Other components are loaded from there
   { name = main.lua, type = config/lua }
   { name = policy.lua, type = config/lua }
-  { name = bluetooth.lua, type = config/lua }
+  # { name = bluetooth.lua, type = config/lua }
 ]
